# vinyl-ripper

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/core/: __init__.py  config.py  exceptions.py
src/interface/: __init__.py  cli.py  display.py
src/metadata/: __init__.py  database.py  models.py  services.py
src/processing/: __init__.py  models.py  services.py
src/recording/: __init__.py  models.py  services.py
src/storage/: __init__.py  models.py  services.py
